[UIFC-468] Apply review suggestions
- Apply minor suggestions
- Add step-level onFailure logging to async Future chains